# MPIManager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: mpimgr.h
src/: mpimgr.cpp
